# discord-rich-presence-plex

./: main.py  pyproject.toml
services/: PlexAlertListener.py  config.py  imgur.py
